# mv_c_package_template_test

./: Makefile_tests  README.md  aspell_project.pws  base.gmk  spell_check.sh
doc/: index.md
doc/examples/apache/: apache-ias-infra--cgi-bin--mv-c-package-template-test.conf  apache-ias-infra--output--mv-c-package-template-test.conf
doc/examples/cron/: mv-c-package-template-test
mv-c-package-template-test/: artifact_variables.gmk  changelog
mv-c-package-template-test/common/: synopsis
orig_tests/: Makefile  README.md  autopkgtest-generic-cmake.gmk  c_library_template_test-answers.txt  c_project_template_test-answers.txt  generic_cmake-answers.txt
src/templates/: c_library_template.json  c_project_template.json  generic-cmake.json
src/templates/c_library_template/: ExtraMakefile  Makefile.am  README.md  [% '.gitignore' %]  [% project.project_name %].pc.in  configure.ac
src/templates/c_library_template/doc/: [% project.package_to_variable_name %].3  [% project.project_name %].1  [% project.project_name %].texi
src/templates/c_library_template/src/: Makefile.am  [% project.package_to_variable_name %].c  [% project.project_name %].c  [% project.project_name %].h  main.c
src/templates/c_library_template2/: ExtraMakefile  Makefile.am  [% '.gitignore' %]  abi_api_versions.tt  configure.ac  development_process.dia
src/templates/c_library_template2/doc/: [% project.project_name %].texi
src/templates/c_library_template2/lib/: Makefile.am  [% project.project_name %].pc.in
src/templates/c_library_template2/src/: Makefile.am  [% project.project_name %].h  main.c
src/templates/c_library_template2/src/lib/: Makefile.am  [% project.project_name %].c  [% project.project_name %].h  [% project.project_name %].map
src/templates/c_library_template2/src/test/: Makefile.am
src/templates/c_library_template2/tests/: Makefile.am  README.md  [% '.gitignore' %]  test[% project.project_name %].c
src/templates/c_mpi_project/: .gitignore  ExtraMakefile  Makefile.am  README.md  [% '.gitignore' %]  configure.ac
src/templates/c_mpi_project/src/: Makefile.am  main.c
src/templates/c_project_template/: .gitignore  ExtraMakefile  Makefile.am  README.md  [% '.gitignore' %]  configure.ac
src/templates/c_project_template/contrib/: [% project.project_name %]-1.0.spec  a-sample-project1-1.0.spec  ax_rpm_init.txt  make_rpm.sh  repack.sh
src/templates/c_project_template/contrib/examples/: autopkgtest-mv-c-project-1.0-2.spec
src/templates/c_project_template/doc/: [% project.package_to_variable_name %].1
src/templates/c_project_template/src/: Makefile.am  [% project.package_to_variable_name %].1  [% project.package_to_variable_name %].texi  example_gtk_sqlite_main.c  main.c  project.1
src/templates/common/: distribute_common.sh
src/templates/common/stuff/: [% '.gitignore' %]
src/templates/generic-cmake/: .gitignore  CHANGELOG.md  CMakeLists.txt  ExtraMakefile  README.md  [% '.gitignore' %]  [% project.package_name %]-version-gen  [% project.package_name %].1.txt  [% project.package_name %].c
src/templates/generic-cmake/cmake_extras/: install_doc.cmake  uninstall.cmake
src/templates/generic-cmake/contrib/specfile/: [% project.package_name %].spec
tests/: .gitignore  Makefile  autopkgtest-mv-c-library.gmk  autopkgtest-mv-c-library2.gmk  c_library_template2_test-answers.txt  c_mpi_project_template_test-answers.txt  chopped_Makefile  clean.sh  run_c_project_template_test-valgrind.sh
tests/make/: autopkgtest-mv-c-mpi-project.gmk  autopkgtest-mv-c-project.gmk
